--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "find_github",
-  "homepage": "https://bruno-arruda-dev.github.io/find_github/",
+  "homepage": "https://bruno-arruda-dev.github.io/find_github",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
